Review changes commited

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -906,8 +906,7 @@
             <li><a href="/xamarin/sftreeview/Scrolling">Scrolling</a></li>
             <li><a href="/xamarin/sftreeview/Selection">Selection</a></li>
             <li><a href="/xamarin/sftreeview/MVVM">MVVM</a></li>
-            <li><a href="/xamarin/sftreeview/On-demand-loading">OnDemandLoading</a></li>
-            <li><a href="/xamarin/sftreeview/RTL">Right-to-left localization</a></li>			
+            <li><a href="/xamarin/sftreeview/Load-on-demand">Load on Demand</a></li>		
 		</ul>
     </li>
 	   
