DOCINFRA-1923 Added Nuget package release notes

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -959,6 +959,9 @@
     <li>
         Release Notes
         <ul>
+		 <li>
+                <a href="/xamarin/release-notes/v16.4.0.43">v16.4.0.43</a>
+            </li>
              <li>
                 <a href="/xamarin/release-notes/v16.4.0.42">v16.4.0.42</a>
             </li>
