--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -126,6 +126,7 @@
             <li><a href="/xamarin/SfButton/Overview">Overview</a></li>
             <li><a href="/xamarin/SfButton/GettingStarted">Getting Started</a></li>
 			<li><a href="/xamarin/SfButton/VisualStates">Visual States</a></li>
+			<li><a href="/xamarin/SfButton/Customization">Customization</a></li>
         </ul>
     </li>
     <li>
