--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -906,7 +906,8 @@
             <li><a href="/xamarin/sftreeview/Scrolling">Scrolling</a></li>
             <li><a href="/xamarin/sftreeview/Selection">Selection</a></li>
             <li><a href="/xamarin/sftreeview/MVVM">MVVM</a></li>
-            <li><a href="/xamarin/sftreeview/Load-on-demand">Load on Demand</a></li>		
+            <li><a href="/xamarin/sftreeview/Load-on-demand">Load on Demand</a></li>
+            <li><a href="/xamarin/sftreeview/RTL">Right to left(RTL)</a></li>		
 		</ul>
     </li>
 	   
