XAMARIN-22901: Have done the review changes in badge view.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -87,7 +87,10 @@
         <ul>
             <li><a href="/xamarin/sfbadgeview/overview">Overview</a></li>
             <li><a href="/xamarin/sfbadgeview/getting-started">Getting Started</a></li>
-            <li><a href="/xamarin/sfbadgeview/badgeview-settings">BadgeView Settings</a></li>
+            <li><a href="/xamarin/sfbadgeview/badge-customization">Badge Customization</a></li>
+            <li><a href="/xamarin/sfbadgeview/position-customization">Position Customization</a></li>
+            <li><a href="/xamarin/sfbadgeview/predefined-symbols">Predefined Symbols</a></li>
+            <li><a href="/xamarin/sfbadgeview/animation">Animation</a></li>
         </ul>
     </li>
     <li>
