--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -79,7 +79,7 @@
             <li><a href="/xamarin/sfbackdroppage/overview">Overview</a></li>
             <li><a href="/xamarin/Sfbackdroppage/getting-started">Getting Started</a></li>
 			<li><a href="/xamarin/sfbackdroppage/cornerShape-customization">Corner shape Customization</a></li>
-            <li><a href="/xamarin/Sfbackdroppage/RevealingHeight-Customization">Revealing height Customization</a></li>
+            <li><a href="/xamarin/Sfbackdroppage/RevealingHeight-Customization">Reveal height Customization</a></li>
         </ul>
     </li>
 	 <li>
