--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -513,6 +513,7 @@
 			<li><a href="/xamarin/SfMaps/ColorMapping">Color Mapping</a></li>
             <li><a href="/xamarin/SfMaps/DataLabels">Data Labels</a></li>            
             <li><a href="/xamarin/SfMaps/Legend">Legend</a></li>
+            <li><a href="/xamarin/SfMaps/Tooltip">Tooltip</a></li>
             <li><a href="/xamarin/SfMaps/Sublayer">Sublayer</a></li>
             <li><a href="/xamarin/SfMaps/UserInteraction">User Interaction</a></li>
             <li><a href="/xamarin/SfMaps/MapsProvider">Maps Providers</a></li>
