Development changes has been moved into hotfix

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -617,7 +617,9 @@
         SfParallaxView
         <ul>
             <li><a href="/xamarin/sfparallaxview/overview">Overview</a></li>
-            <li><a href="/xamarin/sfparallaxview/GettingStarted">Getting Started</a></li>			
+            <li><a href="/xamarin/sfparallaxview/GettingStarted">Getting Started</a></li>
+            <li><a href="/xamarin/sfparallaxview/Customization">Customization</a></li>	
+            <li><a href="/xamarin/sfparallaxview/Scrolling support for custom controls">Scrolling support for custom controls</a></li>			
            </ul>
     </li>
 	<li>
