--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -222,7 +222,7 @@
             <li><a href="/xamarin/chips/Getting-started">Getting Started</a></li>
             <li><a href="/xamarin/chips/Populating-chips-item">Populating Items</a></li>
             <li><a href="/xamarin/chips/Types">Chips Types</a></li>
-            <li><a href="/xamarin/chips/Types">Customization</a></li>
+            <li><a href="/xamarin/chips/Customization">Customization</a></li>
         </ul>
     </li>
     <li>
