--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -1100,6 +1100,12 @@
 			<li>
                 <a href="/xamarin/release-notes/v12.3.0.36">v12.3.0.36</a>
             </li>
+			<li>
+                <a href="/xamarin/release-notes/v12.2.0.36">v12.2.0.36</a>
+            </li>
+			<li>
+                <a href="/xamarin/release-notes/v12.1.0.43">v12.1.0.43</a>
+            </li>
         </ul>
     </li>
 </ul>
