--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -968,6 +968,9 @@
     <li>
         Release Notes
         <ul>
+            <li>
+                <a href="/xamarin/release-notes/v16.4.0.46">v16.4.0.46</a>
+            </li>
 		 <li>
                 <a href="/xamarin/release-notes/v16.4.0.44">v16.4.0.44</a>
             </li>
