XAMARIN-23288 Add content for RTL support in Schedule Xamarin Forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -832,6 +832,7 @@
 			<li><a href="/xamarin/sfschedule/timezone">Time Zone</a></li>
 			<li><a href="/xamarin/sfschedule/date-navigations">Date Navigations</a></li>
             <li><a href="/xamarin/sfschedule/localization">Localization</a></li>
+			<li><a href="/xamarin/sfschedule/right-to-left">Right to left(RTL)</a></li>
         </ul>
     </li>
     
