--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -163,6 +163,7 @@
             <li><a href="/xamarin/sfcalendar/localization">Localization</a></li>
             <li><a href="/xamarin/sfcalendar/how-to">How To</a></li>
             <li><a href="/xamarin/sfcalendar/Feature-Comparison-across-the-different-platforms">Feature Comparison</a></li>
+            <li><a href="/xamarin/sfcalendar/calendar-theme">Theming</a></li>
         </ul>
     </li>
 
@@ -833,6 +834,7 @@
 			<li><a href="/xamarin/sfschedule/date-navigations">Date Navigations</a></li>
             <li><a href="/xamarin/sfschedule/localization">Localization</a></li>
 			<li><a href="/xamarin/sfschedule/right-to-left">Right to left(RTL)</a></li>
+			<li><a href="/xamarin/sfschedule/schedule-theme">Theming</a></li>
         </ul>
     </li>
     
