XAMARIN-23768 UG included for Commands

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -160,6 +160,7 @@
             <li><a href="/xamarin/sfcalendar/calendar-events">Events (Appointments)</a></li>
             <li><a href="/xamarin/sfcalendar/select-multiple-dates">Select Multiple Dates</a></li>
             <li><a href="/xamarin/sfcalendar/restrict-dates-from-selection">Restrict Dates From Selection</a></li>
+			<li><a href="/xamarin/sfcalendar/calendar-mvvm">MVVM</a></li>
             <li><a href="/xamarin/sfcalendar/change-first-day-of-week">Change First Day Of Week</a></li>
             <li><a href="/xamarin/sfcalendar/localization">Localization</a></li>
             <li><a href="/xamarin/sfcalendar/how-to">How To</a></li>
