--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -975,6 +975,7 @@
     <li>
         Release Notes
         <ul>
+		<li> <a href = "/xamarin/release-notes/v16.4.0.48">v16.4.0.48</a></li>
 		 <li>
                 <a href="/xamarin/release-notes/v16.4.0.47">v16.4.0.47</a>
             </li>
