Committing reviewed content

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -52,6 +52,9 @@
         <a href="/xamarin/introduction/Control-Dependencies">Control Dependencies</a>
     </li>
     <li>
+        <a href="/xamarin/Themes/Themes">Themes</a>
+    </li>
+    <li>
         SfAutoComplete
         <ul>
             <li><a href="/xamarin/sfautocomplete/overview">Overview</a></li>
