--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -937,7 +937,7 @@
             <li><a href="/xamarin/sftextinputlayout/custom-icons">Custom Icons</a></li>
             <li><a href="/xamarin/sftextinputlayout/assistive-labels">Assistive Labels</a></li>
             <li><a href="/xamarin/sftextinputlayout/states-and-colors">States and Colors</a></li>
-		    <li><a href="/xamarin/sftextinputlayout/right-to-left">Right to Left(RTL)</a></li> 
+		    <li><a href="/xamarin/sftextinputlayout/right-to-left">Right-to-Left(RTL)</a></li> 
 			<li><a href="/xamarin/sftextinputlayout/how-to">How to</a></li> 
         </ul>
     </li>
