--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -1002,6 +1002,7 @@
     <li>
         Release Notes
         <ul>
+		<li> <a href = "/xamarin/release-notes/v16.4.0.52">v16.4.0.52</a></li>
 		<li> <a href = "/xamarin/release-notes/v16.4.0.48">v16.4.0.48</a></li>
 		 <li>
                 <a href="/xamarin/release-notes/v16.4.0.47">v16.4.0.47</a>
