Updated toc file for theming

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -52,7 +52,11 @@
         <a href="/xamarin/introduction/Control-Dependencies">Control Dependencies</a>
     </li>
     <li>
-        <a href="/xamarin/Themes/Themes">Themes</a>
+        Themes
+        <ul>
+            <li><a href="/xamarin/Themes/Themes">How to apply themes</a></li>      
+            <li><a href="/xamarin/Themes/Keys">Keys</a></li>      
+        </ul>
     </li>
     <li>
         SfAutoComplete
