XAMARIN-24122 Update UG documentation for ExportAsImage support in SfPdfViewer

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -655,6 +655,7 @@
 		<li><a href="/xamarin/sfpdfviewer/Working-with-Scrollhead">Working with ScrollHead</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Localization">Localization</a></li>
 		<li><a href="/xamarin/sfpdfviewer/Importing-and-exporting-form-data">Importing and exporting form data</a></li>
+		<li><a href="/xamarin/sfpdfviewer/Export-as-image">PDF to image conversion</a></li>
 		</ul>
 	</li>
     <li>
