UG document has been edited for ItemSelected event support in xamarin forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -917,6 +917,7 @@
             <li><a href="/xamarin/sftreemap/layout">Layout</a></li>
             <li><a href="/xamarin/sftreemap/customization">Customization</a></li>
             <li><a href="/xamarin/sftreemap/treemap-elements">TreeMap Elements</a></li>
+			<li><a href="/Xamarin/sftreemap/treemap events">TreeMap Events</a></li>
         </ul>
     </li>
 	<li>
