--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -211,9 +211,19 @@
             <li><a href="/xamarin/sfchart/performance">Performance</a></li>
             <li><a href="/xamarin/sfchart/chartannotation">Annotations</a></li>
             <li><a href="/xamarin/sfchart/technicalIndicators">Technical Indicators</a></li>
-            <li><a href="/xamarin/sfchart/export">Exporting</a></li>        
-            <li><a href="/xamarin/sfchart/How-To">How to</a></li> 
-            <li><a href="/xamarin/sfchart/Localization">Localization</a></li>  			
+            <li><a href="/xamarin/sfchart/export">Exporting</a></li>
+            <li><a href="/xamarin/sfchart/Localization">Localization</a></li>
+            <li>
+                How to
+                <ul>
+                    <li><a href="/xamarin/sfchart/how-to/Transform-axis-value-to-pixel-value-and-vice-versa">Transform axis value to pixel value and vice-versa</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Get-the-touch-position-in-chart">Get the touch position in chart</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Get-the-data-point-collection-based-on-region">Get the data point collection based on region</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Adding-duplicate-axis-in-SfChart">Adding duplicate axis in SfChart</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Adding-Multiple-trackball-in-SfChart">Adding Multiple trackball in SfChart</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Customize-the-axis-label-generation-in-SfChart">Customize the axis label generation in SfChart</a></li>
+                </ul>
+            </li>
         </ul>
     </li>
 	<li>
