File path added

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -87,6 +87,7 @@
             <li><a href="/xamarin/Sfbackdroppage/getting-started">Getting Started</a></li>
 			<li><a href="/xamarin/sfbackdroppage/cornerShape-customization">Corner Shape Customization</a></li>
             <li><a href="/xamarin/Sfbackdroppage/RevealingHeight-Customization">Reveal Height Customization</a></li>
+			<li><a href="/xamarin/Sfbackdroppage/header-configuration">Header Configuration</a></li>
         </ul>
     </li>
 	 <li>
