check box content added

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -940,6 +940,7 @@
             <li><a href="/xamarin/sftreeview/Interactivity">Interactivity</a></li>
             <li><a href="/xamarin/sftreeview/Scrolling">Scrolling</a></li>
             <li><a href="/xamarin/sftreeview/Selection">Selection</a></li>
+            <li><a href="/xamarin/sftreeview/Checkbox">Checkbox</a></li>
             <li><a href="/xamarin/sftreeview/MVVM">MVVM</a></li>
             <li><a href="/xamarin/sftreeview/load-on-demand">Load on Demand</a></li>
             <li><a href="/xamarin/sftreeview/right-to-left">Right to left(RTL)</a></li>		
