I have prepared UG document for Activation mode and OncreateLabels Method

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -221,6 +221,7 @@
                     <li><a href="/xamarin/sfchart/how-to/Get-the-touch-position-in-chart">Get the touch position in chart</a></li>
                     <li><a href="/xamarin/sfchart/how-to/Get-the-data-point-collection-based-on-region">Get the data point collection based on region</a></li>
                     <li><a href="/xamarin/sfchart/how-to/Adding-duplicate-axis-in-SfChart">Adding duplicate axis in SfChart</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Customize-the-axis-label-generation-in-SfChart">Customize the axis label generation in SfChart</a></li>
                 </ul>
             </li>			
             <li><a href="/xamarin/sfchart/Localization">Localization</a></li>
