--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -221,6 +221,8 @@
                     <li><a href="/xamarin/sfchart/how-to/Get-the-touch-position-in-chart">Get the touch position in chart</a></li>
                     <li><a href="/xamarin/sfchart/how-to/Get-the-data-point-collection-based-on-region">Get the data point collection based on region</a></li>
                     <li><a href="/xamarin/sfchart/how-to/Adding-duplicate-axis-in-SfChart">Adding duplicate axis in SfChart</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Customize_the_SfChart_padding">Constomize the chart padding</a></li>
+                    <li><a href="/xamarin/sfchart/how-to/Fit_the_view_within_the_doughnut_series_hole">Fit the view of center view within the doughnut series hole</a></li>
                 </ul>
             </li>			
             <li><a href="/xamarin/sfchart/Localization">Localization</a></li>
