--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -270,6 +270,7 @@
             <li><a href="/xamarin/sfcombobox/populating-data">Populating Data </a></li>
             <li><a href="/xamarin/sfcombobox/retrieving-selected-values">Retrieving Selected Values</a></li>
             <li><a href="/xamarin/sfcombobox/multiple-selection">Multiple selection</a></li>
+            <li><a href="/xamarin/sfcombobox/no-result-found">No Result Found</a></li>
             <li><a href="/xamarin/sfcombobox/highlighting-matched-text">Highlighting matched text</a></li>
             <li><a href="/xamarin/sfcombobox/header-and-footer">Header and Footer</a></li>
             <li><a href="/xamarin/sfcombobox/editable-modes">Editable Modes</a></li>
