XAMARIN-25865 added Accordion and Expander in toc file

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -80,6 +80,12 @@
              <li><a href="/xamarin/sfautocomplete/how-to">How To</a></li>
         </ul>
     </li>
+    <li>
+        SfAccordion
+        <ul>
+            <li><a href="/xamarin/Sfaccordion/getting-started">Getting Started</a></li>
+        </ul>
+    </li>
 	<li>
         SfBackdropPage
         <ul>
@@ -451,6 +457,12 @@
             <li>
                 <a href="/file-formats/DocIO/FAQ">FAQ</a>
             </li>
+        </ul>
+    </li>
+    <li>
+        SfExpander
+        <ul>
+            <li><a href="/xamarin/Sfexpander/getting-started">Getting Started</a></li>
         </ul>
     </li>
 	<li>
