TabView ImageSource have been modified in ug documentation.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -916,6 +916,8 @@
             <li><a href="/xamarin/sftabview/Position-of-Header">Position of Header</a></li>
             <li><a href="/xamarin/sftabview/Handling-of-Overflow-Tabs">Handling of Overflow Tabs</a></li>
             <li><a href="/xamarin/sftabview/Custom-Header">Custom Header</a></li>
+            <li><a href="/xamarin/sftabview/ImageSource">ImageSource</a></li>
+            <li><a href="/xamarin/sftabview/NestedTab">NestedTab</a></li>
         </ul>
     </li>
     <li>
