OverView Image have been modified in ug documentation.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -909,7 +909,7 @@
         <ul>
             <li><a href="/xamarin/sftabview/Overview">Overview</a></li>
             <li><a href="/xamarin/sftabview/Getting-Started">Getting Started</a></li>
-            <li><a href="/xamarin/sftabview/TabItems">Tab Items</a></li>
+            <li><a href="/xamarin/sftabview/TabViewHeaderCustomization">TabView Header Customization</a></li>
             <li><a href="/xamarin/sftabview/Selection-Changed">Selection Changed</a></li>
             <li><a href="/xamarin/sftabview/Display-Type">Display Type</a></li>
             <li><a href="/xamarin/sftabview/Selection-Indicator">Selection Indicator</a></li>
