UG Documentation have been modified.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -854,6 +854,8 @@
             <li><a href="/xamarin/sfrotator/navigation-modes">Navigation Modes</a></li>
             <li><a href="/xamarin/sfrotator/sliding-direction">Sliding Direction</a></li>
             <li><a href="/xamarin/sfrotator/header-visibility">Header Visibility</a></li>
+            <li><a href="/xamarin/sfrotator/placement-modes">Placement Modes</a></li>
+            <li><a href="/xamarin/sfrotator/dots-customization">Dots Customization</a></li>
         </ul>
     </li>
     <li>
