--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -856,6 +856,7 @@
             <li><a href="/xamarin/sfrotator/header-visibility">Header Visibility</a></li>
             <li><a href="/xamarin/sfrotator/placement-modes">Placement Modes</a></li>
             <li><a href="/xamarin/sfrotator/dots-customization">Dots Customization</a></li>
+            <li><a href="/xamarin/sfrotator/loading-online-images">Loading Online Images</a></li>
         </ul>
     </li>
     <li>
