TabView Documentation have been moved to Release.

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -923,13 +923,15 @@
         <ul>
             <li><a href="/xamarin/sftabview/Overview">Overview</a></li>
             <li><a href="/xamarin/sftabview/Getting-Started">Getting Started</a></li>
-            <li><a href="/xamarin/sftabview/TabItems">Tab Items</a></li>
+            <li><a href="/xamarin/sftabview/TabViewHeaderCustomization">TabView Header Customization</a></li>
             <li><a href="/xamarin/sftabview/Selection-Changed">Selection Changed</a></li>
             <li><a href="/xamarin/sftabview/Display-Type">Display Type</a></li>
             <li><a href="/xamarin/sftabview/Selection-Indicator">Selection Indicator</a></li>
             <li><a href="/xamarin/sftabview/Position-of-Header">Position of Header</a></li>
             <li><a href="/xamarin/sftabview/Handling-of-Overflow-Tabs">Handling of Overflow Tabs</a></li>
             <li><a href="/xamarin/sftabview/Custom-Header">Custom Header</a></li>
+            <li><a href="/xamarin/sftabview/ImageSource">ImageSource</a></li>
+            <li><a href="/xamarin/sftabview/NestedTab">NestedTab</a></li>
         </ul>
     </li>
     <li>
