Given MR for getting started alone

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -147,6 +147,13 @@
 			<li><a href="/xamarin/SfButton/Customization">Customization</a></li>
         </ul>
     </li>
+	<li>
+        Cards
+        <ul>
+            <li><a href="/xamarin/cards/overview">Overview</a></li>
+            <li><a href="/xamarin/cards/Getting-Started">Getting Started</a></li>
+        </ul>
+    </li>
     <li>
         Calculate
         <ul>
