Committed the ug content for gradient view in xamarin.forms

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -477,6 +477,14 @@
         </ul>
     </li>
 	<li>
+	SfGradientView
+        <ul>
+            <li><a href="/xamarin/sfgradientview/overview">Overview</a></li>
+            <li><a href="/xamarin/sfgradientview/getting-started">Getting Started</a></li>
+			<li><a href="/xamarin/sfgradientview/customization">Customization</a></li>
+	    </ul>
+    </li>
+	<li>
         SfImageEditor
         <ul>
             <li><a href="/xamarin/sfimageeditor/overview">Overview</a></li>
