--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -614,7 +614,7 @@
         </ul>
     </li>
     <li>
-        DocIO
+        Word Library (DocIO)
         <ul>
             <li>
                 <a href="/file-formats/DocIO/Overview">Overview</a>
@@ -924,7 +924,7 @@
         </ul>
     </li>
     <li>
-        Presentation
+        PowerPoint Library (Presentation)
         <ul>
             <li>
                 <a href="/file-formats/Presentation/Overview">Overview</a>
