--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -1236,59 +1236,15 @@
         </ul>
     </li>
     <li>
-        XlsIO
+        Excel Library (XlsIO)
         <ul>
-            <li><a href="/file-formats/xlsio/overview">Overview</a></li>
-            <li><a href="/file-formats/xlsio/assemblies-required">Assemblies Required</a></li>
-            <li><a href="/file-formats/xlsio/getting-started">Getting Started</a></li>
-            <li><a href="/file-formats/xlsio/loading-and-saving-workbook">Loading and Saving Workbook</a></li>
-            <li><a href="/file-formats/xlsio/xamarin">Xamarin</a></li>
-            <li><a href="/file-formats/xlsio/working-with-excel-worksheet">Working with Excel Worksheet</a></li>
-            <li><a href="/file-formats/xlsio/worksheet-rows-and-columns-manipulation">Worksheet Rows and Columns Manipulation</a></li>
-            <li><a href="/file-formats/xlsio/worksheet-cells-manipulation">Worksheet Cells Manipulation</a></li>
-            <li><a href="/file-formats/xlsio/working-with-cell-or-range-formatting">Working with Cell or Range Formatting</a></li>
-            <li><a href="/file-formats/xlsio/working-with-data">Working with Data</a></li>
-            <li><a href="/file-formats/xlsio/working-with-formulas">Working with Formulas</a></li>
-            <li><a href="/file-formats/xlsio/working-with-conditional-formatting">Working with Conditional Formatting</a></li>
-            <li><a href="/file-formats/xlsio/working-with-data-validation">Working with Data Validation</a></li>
-            <li><a href="/file-formats/xlsio/working-with-charts">Working with Charts</a></li>
-            <li><a href="/file-formats/xlsio/working-with-template-markers">Working with Template Markers</a></li>
-            <li><a href="/file-formats/xlsio/working-with-excel-tables">Working with Tables</a></li>
-            <li><a href="/file-formats/xlsio/working-with-pictures">Working with Pictures</a></li>
-            <li><a href="/file-formats/xlsio/working-with-pivot-tables">Working with Pivot Tables</a></li>
-            <li><a href="/file-formats/xlsio/working-with-pivot-charts">Working with Pivot Charts</a></li>
-            <li><a href="/file-formats/xlsio/security">Security</a></li>
-            <li><a href="/file-formats/xlsio/working-with-drawing-objects">Working with Drawing Objects</a></li>
-            <li><a href="/file-formats/xlsio/custom-xml-support">Custom XML Support</a></li>
             <li>
-                <a href="/file-formats/xlsio/migration-from-office-automation-to-syncfusion-xlsio">Migration from Office Automation to Syncfusion XlsIO</a>
-                <ul>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/add-worksheets-to-workbook">Add Worksheets to Workbook</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/activate-a-worksheet">Activate a Worksheet</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/protect-excel-workbook">Protect Excel Workbook</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/unprotect-excel-workbook">Unprotect Excel Workbook</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/create-pie-chart-in-excel">Create Pie Chart in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/use-formulas-in-excel">Use Formulas in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/create-named-range-in-excel">Create Named Range in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/add-comments-in-excel">Add Comments in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/delete-comments-in-excel">Delete Comments in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/merge-cells-in-excel">Merge Cells in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/unmerge-cells-in-excel">Unmerge Cells in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/apply-borders-in-excel">Apply Borders in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/add-hyperlinks-in-excel">Add Hyperlinks in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/hide-excel-worksheets">Hide Excel Worksheets</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/unhide-excel-worksheets">Unhide Excel Worksheets</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/rotate-text-in-cells">Rotate Text in Cells</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/filter-excel-data">Filter Excel Data</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/wrap-text-in-excel">Wrap Text in Excel</a></li>
-                    <li><a href="/file-formats/xlsio/migrate-from-office-automation-to-syncfusion-xlsio/set-background-for-excel-worksheet">Set Background for Excel Worksheet</a></li>
-                </ul>
-            </li>
-            <li><a href="/file-formats/xlsio/supported-features-by-file-formats">Supported Features by File Formats</a></li>
-            <li><a href="/file-formats/xlsio/supported-features-by-platforms">Supported Features by Platforms</a></li>
-            <li><a href="/file-formats/xlsio/improving-performance">Improving Performance</a></li>
-            <li><a href="/file-formats/xlsio/faq">FAQ</a></li>
-        </ul>
+				<a href="https://help.syncfusion.com/file-formats/xlsio/overview">Overview</a>
+			</li>
+            <li>
+				<a href="https://help.syncfusion.com/file-formats/xlsio/create-read-edit-excel-files-in-xamarin-c-sharp">Getting Started</a>
+			</li>
+		</ul>
     </li>
     <li>
         <a href="/xamarin/Utility">Utilities</a>
