Added to new md file on html

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -1030,6 +1030,12 @@
 			<li><a href="/xamarin/Rich-Text-Editor/Loading-and-saving-RTF-content">Loading and saving RTF content</a></li>
 			<li><a href="/xamarin/Rich-Text-Editor/right-to-left">Right to left(RTL)</a></li>
             <li><a href="/xamarin/Rich-Text-Editor/localization">Localization</a></li>
+			<li>
+                How to
+                <ul>
+                    <li><a href="/xamarin/Rich-Text-Editor/how-to/Fix cursor behaviour in RichTextEditor UWP">Fix cursor behaviour in RichTextEditor UWP Platform</a></li>
+                </ul>
+            </li>
 		</ul>
     </li>
     <li>
