Update proper folder name

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -1033,7 +1033,7 @@
 			<li>
                 How to
                 <ul>
-                    <li><a href="/xamarin/Rich-Text-Editor/how-to/Fix cursor behaviour in RichTextEditor UWP">Fix cursor behaviour in RichTextEditor UWP Platform</a></li>
+                    <li><a href="/xamarin/Rich-Text-Editor/how-to/Fix-cursor-behaviour-in-RichTextEditor-UWP">Fix cursor behaviour in RichTextEditor UWP Platform</a></li>
                 </ul>
             </li>
 		</ul>
