183389 - UG Documentation For Syncfusion License Key Validation - dev

--- a/xamarin-toc.html
+++ b/xamarin-toc.html
@@ -58,6 +58,7 @@
 			<li><a href="/xamarin/licensing/overview">Overview</a></li> 
 			<li><a href="/xamarin/licensing/how-to-generate">How to Generate Syncfusion Xamarin License Key?</a></li> 
 			<li><a href="/xamarin/licensing/how-to-register-in-an-application">How to Register Syncfusion License Key in Xamarin Application?</a></li>
+			<li><a href="/xamarin/licensing/ci-license-validation">How to Validate Syncfusion License Key In CI Services?</a></li>
 			<li><a href="/xamarin/licensing/licensing-errors">Licensing Errors</a></li>
             <li>Licensing FAQ
 	        <ul>
